@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.1.22.6239 (17 Mar 2007)
+
+  17 Mar 2007; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.1.22.6239.ebuild:
+  New snapshot, with repoman QuickCommit(tm) feature
+
 *portage-2.1.22.6209 (15 Mar 2007)
 
   15 Mar 2007; Fabian Groffen <grobian@gentoo.org>
